--- a/PortFolion/PortFolion/Views/GraphTab.xaml
+++ b/PortFolion/PortFolion/Views/GraphTab.xaml
@@ -115,7 +115,7 @@
                     </TextBlock.LayoutTransform>
                 </TextBlock>
             </Expander.Header>
-            <lvc:PieChart Series="{Binding BrakeDown}"  LegendLocation="Bottom" MinHeight="100" MinWidth="100" >
+            <lvc:PieChart Series="{Binding BrakeDown}"  LegendLocation="Bottom" MinHeight="100" MinWidth="100" DataTooltip="{x:Null}">
                 
             </lvc:PieChart>
         </Expander>
