--- a/PortFolion/PortFolion/Views/GraphTab.xaml
+++ b/PortFolion/PortFolion/Views/GraphTab.xaml
@@ -51,7 +51,7 @@
                     <RowDefinition Height="*"/>
                 </Grid.RowDefinitions>
                 <DockPanel Grid.Row="0" Grid.ColumnSpan="2">
-                    <!--<ToggleButton IsChecked="True" x:Name="OpenParams" DockPanel.Dock="Left" Content="{iconPacks:PackIconMaterial Kind=Settings}"></ToggleButton>-->
+                    <ToggleButton IsChecked="True" x:Name="OpenParams" DockPanel.Dock="Left" Content="{iconPacks:PackIconMaterial Kind=Settings}"></ToggleButton>
                     <Button DockPanel.Dock="Right">
                         <Button.ContentTemplate>
                             <DataTemplate>
@@ -71,21 +71,30 @@
                         </i:Interaction.Triggers>
                     </Button>
                 </DockPanel>
-                <!--<WrapPanel Visibility="{Binding IsChecked,ElementName=OpenParams,UpdateSourceTrigger=PropertyChanged,Converter={StaticResource BoolToVisibility}}" Grid.Row="1" Grid.ColumnSpan="2">
-                    <Grid>
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="auto" />
-                            <ColumnDefinition Width="auto" />
-                        </Grid.ColumnDefinitions>
-                        <Grid.RowDefinitions>
-                            <RowDefinition />
-                            <RowDefinition />
-                            <RowDefinition />
-                            <RowDefinition />
-                        </Grid.RowDefinitions>
-                        <TextBlock Grid.Row="0" Grid.Column="0" Text="期間 :" RenderTransformOrigin="2,0" HorizontalAlignment="Center"/>
-                    </Grid>
-                </WrapPanel>-->
+                <StackPanel Grid.Row="1" Grid.ColumnSpan="2"
+                           Visibility="{Binding IsChecked,ElementName=OpenParams,UpdateSourceTrigger=PropertyChanged,Converter={StaticResource BoolToVisibility}}"
+                           Orientation="Vertical">
+                    <DockPanel >
+                        <TextBlock DockPanel.Dock="Top" Text="分割レベル : " VerticalAlignment="Center" HorizontalAlignment="Left"/>
+                        <mah:NumericUpDown DockPanel.Dock="Right" Value="{Binding TargetLevel,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" Interval="1" HorizontalAlignment="Right"/>
+                    </DockPanel>
+                    <DockPanel>
+                        <TextBlock DockPanel.Dock="Top" Text="期間 : " VerticalAlignment="Center" HorizontalAlignment="Left"/>
+                        <ComboBox DockPanel.Dock="Right" ItemsSource="{Binding Source={StaticResource PeriodKey}}" SelectedValue="{Binding TimePeriod}" HorizontalAlignment="Right">
+                            <ComboBox.ItemTemplate>
+                                <DataTemplate>
+                                    <TextBlock Text="{Binding Converter={StaticResource PeriodConverter}}"/>
+                                </DataTemplate>
+                            </ComboBox.ItemTemplate>
+                        </ComboBox>
+                    </DockPanel>
+                    <DockPanel>
+                        <TextBlock DockPanel.Dock="Top" Text="表示" VerticalAlignment="Center" HorizontalAlignment="Left"/>
+                        <ComboBox DockPanel.Dock="Right">
+                            
+                        </ComboBox>
+                    </DockPanel>
+                </StackPanel>
                 <GroupBox Grid.Column="0" Grid.Row="2" Header="Date" mah:ControlsHelper.ContentCharacterCasing="Normal">
                     <TreeView ItemsSource="{Binding DateList}" Style="{StaticResource VirtualisedMetroTreeView}">
                     <TreeView.ItemContainerStyle>
@@ -152,19 +161,8 @@
                         <TextBlock Text="{Binding CurrentDate,StringFormat=yyyy/M/d}"/>
                         <TextBlock Text="{Binding CurrentNode.Name}"/>
                     </StackPanel>
-                    <StackPanel Orientation="Vertical" DockPanel.Dock="Right">
-                        <ToggleButton x:Name="BdParams" Content="{iconPacks:PackIconMaterial Kind=Settings}" HorizontalAlignment="Right"/>
-                        <Grid Margin="0,0,0,15"
-                          Visibility="{Binding IsChecked,ElementName=BdParams,UpdateSourceTrigger=PropertyChanged,Converter={StaticResource BoolToVisibility}}">
-                            <StackPanel Orientation="Vertical" HorizontalAlignment="Right">
-                                <StackPanel Orientation="Horizontal">
-                                    <TextBlock Text="分割レベル : " VerticalAlignment="Center"/>
-                                    <mah:NumericUpDown Value="{Binding TargetLevel,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" Interval="1"/>
-                                    <!--<TextBox Text="{Binding TargetLevel,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"/>-->
-                                </StackPanel>
-                            </StackPanel>
-                        </Grid>
-                    </StackPanel>
+                    <Button x:Name="BdParams" DockPanel.Dock="Right" HorizontalAlignment="Right"
+                                  Content="{iconPacks:PackIconMaterial Kind=Settings}"/>
                 </DockPanel>
                 <lvc:PieChart Grid.Row="1" x:Name="Pie" Series="{Binding BrakeDown}" StartingRotationAngle="90" 
                               MinHeight="200" MinWidth="200" Width="300" Height="280" LegendLocation="None" Margin="15,0,15,3">
@@ -237,28 +235,6 @@
                     </lvc:CartesianChart>
                     <StackPanel Grid.Column="1" Orientation="Vertical">
                         <ToggleButton x:Name="TsParams" Content="{iconPacks:PackIconMaterial Kind=Settings}" HorizontalAlignment="Right"/>
-                        <Grid Visibility="{Binding IsChecked,ElementName=TsParams,UpdateSourceTrigger=PropertyChanged,Converter={StaticResource BoolToVisibility}}">
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition/>
-                                <ColumnDefinition/>
-                            </Grid.ColumnDefinitions>
-                            <Grid.RowDefinitions>
-                                <RowDefinition/>
-                                <RowDefinition/>
-                            </Grid.RowDefinitions>
-                            <TextBlock Grid.Row="0" Grid.Column="0" Text="期間 : " VerticalAlignment="Center"/>
-                            <ComboBox Grid.Row="0" Grid.Column="1" ItemsSource="{Binding Source={StaticResource PeriodKey}}" SelectedValue="{Binding TimePeriod}">
-                                <ComboBox.ItemTemplate>
-                                    <DataTemplate>
-                                        <TextBlock Text="{Binding Converter={StaticResource PeriodConverter}}"/>
-                                    </DataTemplate>
-                                </ComboBox.ItemTemplate>
-                            </ComboBox>
-                            <TextBlock Grid.Row="1" Grid.Column="0" Text="表示 : " VerticalAlignment="Center"/>
-                            <ComboBox Grid.Row="1" Grid.Column="1">
-                                <!--未実装-->
-                            </ComboBox>
-                        </Grid>
                     </StackPanel>
                 </Grid>
             </Expander>
