--- a/PortFolion/PortFolion/Views/GraphTab.xaml
+++ b/PortFolion/PortFolion/Views/GraphTab.xaml
@@ -18,19 +18,27 @@
     <Grid>
         <Grid.Resources>
             <BooleanToVisibilityConverter x:Key="BoolToVisibility"/>
+            
             <ObjectDataProvider x:Key="PeriodKey" MethodName="GetValues" ObjectType="{x:Type sys:Enum}">
                 <ObjectDataProvider.MethodParameters>
                     <x:Type TypeName="vm:Period"/>
                 </ObjectDataProvider.MethodParameters>
             </ObjectDataProvider>
             <cnv:PeriodToStringConverter x:Key="PeriodConverter"/>
+            
+            <ObjectDataProvider x:Key="TransitionStatusKey" MethodName="GetValues" ObjectType="{x:Type sys:Enum}">
+                <ObjectDataProvider.MethodParameters>
+                    <x:Type TypeName="vm:TransitionStatus"/>
+                </ObjectDataProvider.MethodParameters>
+            </ObjectDataProvider>
+            <cnv:TransitionStatusToStringConverter x:Key="TransitionStatusConverter"/>
+            
         </Grid.Resources>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="auto"/>
             <ColumnDefinition Width="auto"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
-        
         
         <Expander Grid.Column="0" IsExpanded="True" ExpandDirection="Right" mah:ControlsHelper.ContentCharacterCasing="Normal">
             <Expander.Header>
@@ -71,31 +79,38 @@
                         </i:Interaction.Triggers>
                     </Button>
                 </DockPanel>
-                <StackPanel Grid.Row="1" Grid.ColumnSpan="2"
-                           Visibility="{Binding IsChecked,ElementName=OpenParams,UpdateSourceTrigger=PropertyChanged,Converter={StaticResource BoolToVisibility}}"
-                           Orientation="Vertical">
-                    <DockPanel >
-                        <TextBlock DockPanel.Dock="Top" Text="分割レベル : " VerticalAlignment="Center" HorizontalAlignment="Left"/>
-                        <mah:NumericUpDown DockPanel.Dock="Right" Value="{Binding TargetLevel,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" Interval="1" HorizontalAlignment="Right"/>
-                    </DockPanel>
-                    <DockPanel>
-                        <TextBlock DockPanel.Dock="Top" Text="期間 : " VerticalAlignment="Center" HorizontalAlignment="Left"/>
-                        <ComboBox DockPanel.Dock="Right" ItemsSource="{Binding Source={StaticResource PeriodKey}}" SelectedValue="{Binding TimePeriod}" HorizontalAlignment="Right">
-                            <ComboBox.ItemTemplate>
-                                <DataTemplate>
-                                    <TextBlock Text="{Binding Converter={StaticResource PeriodConverter}}"/>
-                                </DataTemplate>
-                            </ComboBox.ItemTemplate>
-                        </ComboBox>
-                    </DockPanel>
-                    <DockPanel>
-                        <TextBlock DockPanel.Dock="Top" Text="表示" VerticalAlignment="Center" HorizontalAlignment="Left"/>
-                        <ComboBox DockPanel.Dock="Right">
-                            
-                        </ComboBox>
-                    </DockPanel>
-                </StackPanel>
-                <GroupBox Grid.Column="0" Grid.Row="2" Header="Date" mah:ControlsHelper.ContentCharacterCasing="Normal">
+                <GroupBox Grid.Row="1" Grid.ColumnSpan="2" Header="Params"  mah:ControlsHelper.ContentCharacterCasing="Normal"
+                    Visibility="{Binding IsChecked,ElementName=OpenParams,UpdateSourceTrigger=PropertyChanged,Converter={StaticResource BoolToVisibility}}">
+
+                    <StackPanel Orientation="Vertical">
+                        <DockPanel>
+                            <TextBlock DockPanel.Dock="Top" Text="分割レベル : " VerticalAlignment="Center" HorizontalAlignment="Left"/>
+                            <mah:NumericUpDown DockPanel.Dock="Right" Value="{Binding TargetLevel,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" Interval="1" HorizontalAlignment="Right"/>
+                        </DockPanel>
+                        <DockPanel>
+                            <TextBlock DockPanel.Dock="Top" Text="期間 : " VerticalAlignment="Center" HorizontalAlignment="Left"/>
+                            <ComboBox DockPanel.Dock="Right" ItemsSource="{Binding Source={StaticResource PeriodKey}}" SelectedValue="{Binding TimePeriod}" HorizontalAlignment="Right">
+                                <ComboBox.ItemTemplate>
+                                    <DataTemplate>
+                                        <TextBlock Text="{Binding Converter={StaticResource PeriodConverter}}"/>
+                                    </DataTemplate>
+                                </ComboBox.ItemTemplate>
+                            </ComboBox>
+                        </DockPanel>
+                        <DockPanel>
+                            <TextBlock DockPanel.Dock="Top" Text="表示 : " VerticalAlignment="Center" HorizontalAlignment="Left"/>
+                            <ComboBox DockPanel.Dock="Right" ItemsSource="{Binding Source={StaticResource TransitionStatusKey}}" SelectedValue="{Binding TransitionStatus}" HorizontalAlignment="Right">
+                                <ComboBox.ItemTemplate>
+                                    <DataTemplate>
+                                        <TextBlock Text="{Binding Converter={StaticResource TransitionStatusConverter}}"/>
+                                    </DataTemplate>
+                                </ComboBox.ItemTemplate>
+                            </ComboBox>
+                        </DockPanel>
+                    </StackPanel>
+                </GroupBox>
+                
+                <GroupBox Grid.Row="2" Grid.Column="0" Header="Date" mah:ControlsHelper.ContentCharacterCasing="Normal">
                     <TreeView ItemsSource="{Binding DateList}" Style="{StaticResource VirtualisedMetroTreeView}">
                     <TreeView.ItemContainerStyle>
                         <Style TargetType="{x:Type TreeViewItem}" BasedOn="{StaticResource MetroTreeViewItem}">
